bonus/another-bonus/p3/confs/changeable/npuzzle-app/npuzzle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-npuzzle-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: npuzzle.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-npuzzle
            port:
              number: 80
